inyoka_theme_ubuntuusers/static/style/main.less
/* ... */
div#database_debug_table ul li pre,div#database_debug_table table {
  background-color: #f9f6f2;
  border-bottom: 1px solid #a87818;
  border-top: 1px solid #523a0b;
  font-family: Consolas, 'Deja Vu Mono', 'Bitstream Vera Sans Mono', monospace;
  font-size: 1em;
  margin: 0 -10px;
  padding: 10px;
  text-align: left;
  word-wrap: break;
  overflow: auto;
}

.extension-note {
  .bottom-rounded(10px);
  text-align: center;
  display: block;
  background-color: #d4d4d4;
  width: 99.5%;
  padding: 5px;
  padding-top: 10px;
  margin-top: -10px;
}

.admin_link_js a, a.admin_link_js, .admin_link a, a.admin_link {
  color: @admin_text !important;
  display: relative;
}

.admin_link {
  display: none;
}

.admin_link.right, .admin_link_js.right {
  float: right;
  margin: 0 5px 0 0;
}

#admin_menu {
  float: right;
  clear: both;
  color: #DDDDDD;
  text-align: right;
  margin: 5px 0;

  .bar {
    display: block;
    margin-left: 16px;
    float: right;
    height: 30px;

    a {
      border: 1px solid #A4A4A4;
      border-right: none;
      display: block;
      float: left;
      background: #F4F4F4;
      color: #D4D4D4;
      padding: 4px 10px 2px;
      text-decoration: none;
      height: 100%;
      img {
        opacity: 0.5;
        vertical-align: middle;
        transition: opacity .20s linear;
        -webkit-transition: opacity .20s linear;
        -moz-transition: opacity .20s linear;
        -o-transition: opacity .20s linear;
      }
      .description {
        font-size: 18px;
        font-weight: bold;
        margin: 5px;
        vertical-align: middle;
      }
      transition: color .20s linear, background .20s linear;
      -webkit-transition: color .20s linear, background .20s linear;
      -moz-transition: color .20s linear, background .20s linear;
      -o-transition: color .20s linear, background .20s linear;
    }
    a.highlight, a:hover {
      color: #4F4F4F;
      img {
        opacity: 1;
      }
    }
    a.highlight {
      background: #E8C989;
    }
    a:hover {
      background: #E4E4E4;
    }
    a.highlight:hover {
      background: #D8B979;
    }
    a#admin_layer_button.highlight {
      background: #F2E7CE;
    }
    a#admin_layer_button.highlight:hover {
      background: #E2D7B3;
    }
    a:first-child {
      .left-rounded(3px);
    }
    a:last-child {
      border-right: 1px solid #A4A4A4;
      .right-rounded(3px);
    }
  }
}

.confirm_action {
  text-align: center;
  padding: 0 0.3em;
  background: #f8f8f8;
}

